error: video output display creation failed

[0000000281f0c000] libvlc gl: Initialized libplacebo 21.10.1-15-g6475dd48 (API v181) [0000000133f32510] libvlc generic error: shader: ERROR: 0:17: No matching function for call to _main_0_0(vec4)

[0000000133f32510] libvlc generic error: Failed to compile shader [0000000281f0c000] libvlc gl error: Could not load OpenGL filter 'renderer' [0000000104394200] libvlc video output error: video output display creation failed [h264 @ 0x13101c200] get_buffer() failed [h264 @ 0x13101c200] thread_get_buffer() failed [h264 @ 0x13101c200] decode_slice_header error