opengl: don't crash on no-op libplacebo shader

As of libplacebo 80a07bf48, the color map operation can end up as a
true no-op. In this case, this results in a blank shader with no
signature. Don't crash on this case, but simply omit the call to the
libplacebo shader entirely.

Fixes #26326